name:                reflex-dom-ace
version:             0.3.0.0
license:             BSD3
author:              Doug Beardsley, Tim Johns
maintainer:          mightybyte@gmail.com, slimtim10@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Dom.Ace

  build-depends:
      base
    , containers
    , data-default
    , ghcjs-dom
    , jsaddle
    , lens
    , mtl
    , reflex
    , reflex-dom-core
    , text

  default-extensions:
    OverloadedStrings
    FlexibleContexts

  if impl(ghcjs)
    cpp-options: -DGHCJS_GC_INTERVAL=60000

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  default-language: Haskell2010
