name:                reflex-dom-ace
version:             0.3.0.0
license:             BSD3
author:              Doug Beardsley, Tim Johns
maintainer:          mightybyte@gmail.com, slimtim10@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:
    Reflex.Dom.Ace

  build-depends:
      base >= 4.7 && < 4.15
    , containers == 0.6.*
    , data-default >= 0.5 && < 0.8
    , ghcjs-dom >= 0.9.1.0 && < 0.10
    , jsaddle >= 0.9.0.0 && < 0.10
    , lens >= 4.7 && < 5
    , mtl >= 2.1 && < 2.3
    , reflex-dom-core >= 0.6.1.0 && < 0.7
    , text == 1.2.*

  default-extensions:
    OverloadedStrings
    FlexibleContexts

  if impl(ghcjs)
    cpp-options: -DGHCJS_GC_INTERVAL=60000

  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-orphans

  default-language: Haskell2010
