cabal-version:      1.24
name:               reflex-dom-ace
version:            0.3.0.3
synopsis:           Basic support for using the Ace editor with Reflex.
description:
  Provides basic support for using the Ace editor with Reflex-DOM web apps.
  .
  Ace editor: <https://ace.c9.io/>.

license:            BSD3
license-file:       LICENSE
author:             Doug Beardsley, Tim Johns
maintainer:         slimtim10@gmail.com
category:           Web
build-type:         Simple
stability:          Experimental
extra-source-files: README.md

library
  hs-source-dirs:     src
  exposed-modules:    Reflex.Dom.Ace
  build-depends:
      base             >=4.7     && <4.15
    , containers       >=0.6     && <0.7
    , data-default     >=0.5     && <0.8
    , ghcjs-dom        >=0.9.1.0 && <0.10
    , jsaddle          >=0.9.0.0 && <0.10
    , lens             >=4.7
    , mtl              >=2.1     && <2.3
    , reflex-dom-core  >=0.6.1.0 && <0.9
    , text             >=1.2     && <1.3

  default-extensions:
    FlexibleContexts
    OverloadedStrings

  if impl(ghcjs)
    cpp-options: -DGHCJS_GC_INTERVAL=60000

  ghc-options:        -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/SlimTim10/reflex-dom-ace
